# cachier

./: .codecov.yml  .coveragerc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  METRICS_IMPLEMENTATION.md  Makefile  README.md  README.rst  cachier_text_cache_temp.pkl  codecov.yml  debug_test.py  demo_return_stale_on_timeout.py  mypy.ini  parallel_test_analysis.md  pr-description-update.md  pyproject.toml  pytest.ini  requirenments.txt  setup.cfg  setup.py  test_issue.py  tox.ini  versioneer.py
.cursor/: python.mdc
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: checkdocs.yml  ci-test.yml  install_requires_to_requirements.py  lint.yml  release.yml  safety.yml  test.yml
cachier/: .cachier.test_int_pickling  __init__.py  _types.py  _version.py  base_core.py  config.py  core.py  memory_core.py  mongo_core.py  pickle_core.py
cachier/cores/: base.py  memory.py  mongo.py  odbc.py  pickle.py
cachier/scripts/: cli.py
elad_testing/: hash_pickles.py
examples/: async_example.py  metrics_example.py  prometheus_exporter_example.py  redis_example.py  s3_example.py
scripts/: README-local-testing.md  benchmark_numpy_hash.py  docker-compose.all-cores.yml  docker-compose.mongodb.yml  test-local.sh  test-mongo-local.sh
src/cachier/: __init__.py  __main__.py  _types.py  _version.py  config.py  core.py  metrics.py  util.py
src/cachier/cores/: base.py  memory.py  mongo.py  odbc.py  pickle.py  redis.py  s3.py  sql.py
src/cachier/exporters/: __init__.py  base.py  prometheus.py
tests/: README.md  __init__.py  conftest.py  mongodb_requirements.txt  prepare_text_caching_test.py  redis_requirements.txt  requirements.txt  requirements_mongodb.txt  requirements_postgres.txt  requirements_redis.txt  requirements_s3.txt  speed_eval.py  sql_requirements.txt  standalone_script.py  test_async_backend_clients.py  test_async_core.py  test_base_core.py  test_cache_size_limit.py  test_cachier.py  test_caching_regression.py  test_call_with_freshness_threshold.py  test_call_with_max_age.py  test_cleanup.py  test_config.py  test_conftest_helpers.py  test_core_lookup.py  test_coverage_gaps.py  test_coverage_gaps_simple.py  test_defaults.py  test_entry_size_limit.py  test_exporters.py  test_general.py  test_main.py  test_memory_core.py  test_metrics.py  test_mongo_core.py  test_numpy_hash.py  test_numpy_pandas.py  test_odbc_core.py  test_pickle_core.py  (+12 more)
tests/memory_tests/: conftest.py  test_async_memory_core.py  test_memory_core.py
tests/mongo_tests/: clients.py  conftest.py  helpers.py  test_async_mongo_core.py  test_mongo_core.py
tests/pickle_tests/: conftest.py  test_async_pickle_core.py  test_pickle_core.py
tests/redis_tests/: clients.py  conftest.py  helpers.py  test_async_redis_core.py  test_redis_core.py  test_redis_core_exceptions.py
tests/s3_tests/: __init__.py  conftest.py  helpers.py  test_s3_core.py
tests/sql_tests/: conftest.py  test_async_sql_core.py  test_sql_core.py
