[metadata]
license_file = "LICENSE"
description-file = "README.md"

[build-system]
requires = ["setuptools", "wheel"]


[tool.pytest.ini_options]
testpaths = ["cachier", "tests"]
norecursedirs=["dist", "build"]
addopts = [
    "--color=yes",
    "--cov=cachier",
    "--cov-report=term",
    "--cov-report=xml:cov.xml",
    "-r a",
    "-v",
    "-s",
]
markers = [
    "mongo: test the MongoDB core",
    "memory: test the memory core",
    "pickle: test the pickle core",
]


[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.ruff]
target-version = "py38"
line-length = 79
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E",
    "W", # see: https://pypi.org/project/pycodestyle
    "F", # see: https://pypi.org/project/pyflakes
    "I", #see: https://pypi.org/project/isort/
#    "D", # see: https://pypi.org/project/pydocstyle
#    "N", # see: https://pypi.org/project/pep8-naming
    "S", # see: https://pypi.org/project/flake8-bandit
    "SIM",
]
lint.ignore = [
    "E203",
    "C901",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]
lint.ignore-init-module-imports = true
lint.unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S311", "S105", "S603"]

#[tool.ruff.pydocstyle]
## Use Google-style docstrings.
#convention = "google"

#[tool.ruff.pycodestyle]
#ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
